<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/opcion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Listatareas" />
    <item
        android:id="@+id/opcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Tareasarealizar" />
    <item
        android:id="@+id/opcion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Tareasrealizadas" />
    <item
        android:id="@+id/opcion4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Configuracion" />
</menu>