<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabdiarias"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Diarias" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabsemanales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Semanales" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabmensuales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Mensuales" />
    </com.google.android.material.tabs.TabLayout>
</LinearLayout>